--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "repl_nix_learnllm"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+streamlit = "^1.30.0"
 
 
 [build-system]
